--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ server.port=2028
 #spring datasource properties
 #application.properties is the heart of springboot
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/empleavemanagement
+spring.datasource.url=jdbc:mysql://root:JLiMAGFFFYWQZDHOSGeLqsEGuuGCrfYZ@:/railway
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=FGafoAFeMviAOpfmStzcSkrcjBPeYEUR
 
 #spring hibernate jpa properties
 
