--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.port=2028
 
 #spring datasource properties
 #application.properties is the heart of springboot
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://root:JLiMAGFFFYWQZDHOSGeLqsEGuuGCrfYZ@:/railway
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://root:FGafoAFeMviAOpfmStzcSkrcjBPeYEUR@junction.proxy.rlwy.net:25246/railway
 spring.datasource.username=root
 spring.datasource.password=FGafoAFeMviAOpfmStzcSkrcjBPeYEUR
 
